get rid of [h] for floats; get rid of  \\centering

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \input{localhyphenation.tex}
 \bibliography{localbibliography} 
  
-% \includeonly{ 
+\includeonly{ 
 % % chapters/acknowledgements,
 % % chapters/introduction,
 % % chapters/history,
@@ -22,7 +22,7 @@
 % % chapters/salience,
 % % chapters/production-method,
 % chapters/production-results-vow,
-% % chapters/production-results-con,
+chapters/production-results-con,
 % % chapters/production-results-qual
 % % chapters/production-discussion,
 % % chapters/perception-method,
@@ -33,7 +33,7 @@
 % % chapters/reading,
 % % chapters/list,
 % % chapters/stimuli
-% } 
+} 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
