typeset production results qual

--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,9 @@
 % % chapters/salience,
 % % chapters/production-method,
 % chapters/production-results-vow,
-chapters/production-results-con,
-% % chapters/production-results-qual
-% % chapters/production-discussion,
+% chapters/production-results-con,
+% chapters/production-results-qual
+chapters/production-discussion,
 % % chapters/perception-method,
 % % chapters/perception-results,
 % % chapters/perception-discussion,
