typeset perception method

--- a/main.tex
+++ b/main.tex
@@ -24,8 +24,8 @@
 % chapters/production-results-vow,
 % chapters/production-results-con,
 % chapters/production-results-qual
-chapters/production-discussion,
-% % chapters/perception-method,
+% chapters/production-discussion,
+chapters/perception-method,
 % % chapters/perception-results,
 % % chapters/perception-discussion,
 % % chapters/conclusion,
