typeset perception discussion

--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,9 @@
 % chapters/production-results-con,
 % chapters/production-results-qual
 % chapters/production-discussion,
-chapters/perception-method,
-% % chapters/perception-results,
-% % chapters/perception-discussion,
+% chapters/perception-method,
+% chapters/perception-results,
+chapters/perception-discussion,
 % % chapters/conclusion,
 % % chapters/questionnaire,
 % % chapters/reading,
