--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,8 @@
 % chapters/production-discussion,
 % chapters/perception-method,
 % chapters/perception-results,
-chapters/perception-discussion,
-% % chapters/conclusion,
+% chapters/perception-discussion,
+chapters/conclusion,
 % % chapters/questionnaire,
 % % chapters/reading,
 % % chapters/list,
