first global pass

--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -11,8 +11,18 @@ They also tell us more about the way we process, store, and (re-)use sociolingui
 By defining likely contexts for significant priming effects they might finally even help in coming up with a more elaborate \enquote*{theory of priming} in the realm of sociophonetics.
 }
 \dedication{To Daniela}
-%\typesetter{Change typesetter in localmetadata.tex}
-%\proofreader{Change proofreaders in localmetadata.tex}
+\typesetter{Marten Juskan}
+\proofreader{
+Alec Shaw,
+Amir Ghorbanpour,
+Andreas Hölzl,
+Felix Hoberg,
+Havenol Schrenk,
+Ivica Jeđud,
+Jeffrey Pheiff,
+Jeroen van de Weijer,
+Kate Bellamy
+}
 \author{Marten Juskan}
 \BookDOI{10.5281/zenodo.1451308}
 \renewcommand{\lsSeries}{lv} % use lowercase acronym, e.g. sidl, eotms, tgdi
