--- a/main.tex
+++ b/main.tex
@@ -14,26 +14,26 @@
 \input{localhyphenation.tex}
 \bibliography{localbibliography} 
  
-\includeonly{ 
+% \includeonly{ 
 % % chapters/acknowledgements,
 % % chapters/introduction,
 % % chapters/history,
 % % chapters/variables,
 % % chapters/salience,
 % % chapters/production-method,
-% chapters/production-results-vow,
-% chapters/production-results-con,
-% chapters/production-results-qual
-% chapters/production-discussion,
-% chapters/perception-method,
-% chapters/perception-results,
-% chapters/perception-discussion,
-chapters/conclusion,
+% % chapters/production-results-vow,
+% % chapters/production-results-con,
+% % chapters/production-results-qual
+% % chapters/production-discussion,
+% % chapters/perception-method,
+% % chapters/perception-results,
+% % chapters/perception-discussion,
+% % chapters/conclusion,
 % % chapters/questionnaire,
 % % chapters/reading,
 % % chapters/list,
 % % chapters/stimuli
-} 
+% } 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
@@ -71,7 +71,7 @@ chapters/conclusion,
 
 \appendix
 
-\include{chapters/questionnaire}
+\include{chapters/questionnaire} %redo
 \include{chapters/reading}
 \include{chapters/list}
 \include{chapters/stimuli}
