--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass[output=book,nonflat,modfonts,
-  colorlinks,citecolor=brown,
+%   colorlinks,citecolor=brown,
 %   showindex,
-  draftmode,
-  draft
+%   draftmode,
+%   draft
 		  ]{langsci/langscibook}    
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
